--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
     "web-vitals": "^2.1.4"
